Make sure syntax is legible

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -114,7 +114,7 @@ h6 {
 
 code:not(pre > code) {
   word-break: break-word;
-  background: var(--inline-code-bg);
+  background: var(--code-bg);
   color: var(--inline-code-color);
 }
 
