--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,7 +10,7 @@
   --bullet: initial;
   --max-inline-size: 60ch;
   --inline-code-color: hsl(0, 0%, 20%);
-  --inline-code-bg: hsl(0, 0%, 92%);
+  --code-bg: hsl(0, 0%, 92%);
   --blockquote-bg: hsla(0, 100%, 100%, 0.5);
 
   --space-3xs: clamp(0.31rem, calc(0.29rem + 0.12vw), 0.38rem);
