--- a/src/scss/themes/_1999.scss
+++ b/src/scss/themes/_1999.scss
@@ -10,7 +10,7 @@
   --background: url("/img/themes/geocities/1999-bg.webp");
   --bullet: url("/img/themes/geocities/redball.gif");
   --inline-code-color: hsl(123, 100%, 50%);
-  --inline-code-bg: #000;
+  --code-bg: #000;
   --header-color: hsl(317, 99%, 43%);
 
   .skyscraper {
