--- a/src/scss/themes/_city.scss
+++ b/src/scss/themes/_city.scss
@@ -29,7 +29,7 @@
   --link-color: light-dark(oklch(0.46 0.21 292.12 / 1), oklch(0.94 0.08 175.91 / 1));
   --link-hover-color: light-dark(oklch(64.081% 0.23752 328.48), oklch(0.94 0.08 175.91 / 1));
   --inline-code-color: light-dark(oklch(48.376% 0.23141 274.82), oklch(0.87 0.2 145.12 / 1));
-  --inline-code-bg: light-dark(oklch(89.965% 0.0713 326.829), transparent);
+  --code-bg: light-dark(oklch(89.965% 0.0713 326.829), transparent);
   --photo-bg: linear-gradient(oklch(0.63 0.23 288.28 / 1), oklch(79.365% 0.19842 329.093));
   --blockquote-bg: oklch(1 0 0 / 0.15);
   --border-radius: 10px;
