--- a/src/scss/themes/_garden.scss
+++ b/src/scss/themes/_garden.scss
@@ -8,7 +8,7 @@
   --link-color: hsl(319, 27%, 21%);
   --accent-color: oklch(0.57 0.3 310.32);
   --link-hover-color: var(--accent-color);
-  --inline-code-bg: hsl(30, 89%, 90%);
+  --code-bg: hsl(30, 89%, 90%);
   --inline-code-color: var(--link-color);
   --bullet: url(/img/themes/garden-theme/leaf-bullet.png);
 
