--- a/src/scss/themes/_vaporwave.scss
+++ b/src/scss/themes/_vaporwave.scss
@@ -42,7 +42,7 @@
   --link-color: hsla(250, 100%, 20%, 1);
   --link-hover-color: white;
   --bullet: url("/img/themes/cd-bullet.png");
-  --inline-code-bg: hsl(172, 100%, 67%);
+  --code-bg: hsl(172, 100%, 67%);
   --photo-bg: linear-gradient(-45deg, hsl(172, 100%, 44%), hsl(306, 100%, 50%));
   --header-color: #fff;
   --button-selected-bg: oklch(0.89 0.06 292.88 / 1);
